--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=admin
 spring.datasource.password=Qwerty123!
 
 spring.jpa.hibernate.ddl-auto=create
+spring.mvc.hiddenmethod.filter.enabled=true
